<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dpagliotto.gimb.components.CustomEditText
                android:id="@+id/edtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp" />

            <com.dpagliotto.gimb.components.CustomEditText
                android:id="@+id/edtUserNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/nome"
                android:textAlignment="center"
                android:layout_marginBottom="15dp" />

            <com.dpagliotto.gimb.components.CustomEditText
                android:id="@+id/edtUserSobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/sobrenome"
                android:textAlignment="center"
                android:layout_marginBottom="15dp" />

            <com.dpagliotto.gimb.components.CustomEditText
                android:id="@+id/edtUserCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/cpf"
                android:textAlignment="center"
                android:layout_marginBottom="15dp" />

            <com.dpagliotto.gimb.components.CustomEditText
                android:id="@+id/edtUserTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:hint="@string/telefone"
                android:textAlignment="center"
                android:layout_marginBottom="15dp" />

            <com.dpagliotto.gimb.components.CustomButtonPrimary
                android:id="@+id/btnUserRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:layout_marginBottom="20dp"/>

            <com.dpagliotto.gimb.components.CustomButtonSecondary
                android:id="@+id/btnUserCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
