<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/side_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_side_navigation_content"
        app:headerLayout="@layout/side_navigation_main_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/nav_header_height"
            android:padding="20dp"
            android:orientation="vertical">

            <com.dpagliotto.paykids.components.CustomTextViewSecondary
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:text="@string/menu" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorTextSecondary"/>

            <com.dpagliotto.paykids.components.CustomTextViewSecondary
                android:id="@+id/side_navigation_solicitar_saldo"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="7dp"
                android:enabled="true"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/solicitar_mais_saldo"/>

            <com.dpagliotto.paykids.components.CustomTextViewSecondary
                android:id="@+id/side_navigation_extrato"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="7dp"
                android:enabled="true"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/extrato"/>

            <com.dpagliotto.paykids.components.CustomTextViewSecondary
                android:id="@+id/side_navigation_dashboards"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="7dp"
                android:enabled="true"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/dashboards"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
